unpackaged/main/default/objects/Win_Or_Lost_Report__c/Win_Or_Lost_Report__c.object-meta.xml
<CustomObject>
    <label>Win Or Lost Report</label>
    <nameField>
        <displayFormat>WLR-{0000000}</displayFormat>
        <label>Win Or Lost Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Win Or Lost Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>