unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Additional_Key_Reason__c.field-meta.xml
<CustomField>
    <fullName>Additional_Key_Reason__c</fullName>
    <inlineHelpText>Additional reasons for win/loss result</inlineHelpText>
    <label>Additional Key Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Key_Reason</valueSetName>
    </valueSet>
</CustomField>