unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Client_Debrief_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Debrief_Date__c</fullName>
    <label>Client Debrief Date</label>
    <type>Date</type>
</CustomField>