unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Main Competitors Throughout Process</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>T1_Competitor__c</referenceTo>
    <relationshipLabel>Win Or Lost Reports (Competitor)</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>