unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Contact_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Key Customer/Prospect Decision Makers Name</inlineHelpText>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Or Lost Reports (Contact Name)</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>