unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Contract_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signature_Date__c</fullName>
    <label>z_Contract Signature Date</label>
    <type>Date</type>
</CustomField>