unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Customer_Demonstration_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Demonstration_Requirements__c</fullName>
    <inlineHelpText>Was the product demonstration tailored to the customers requirements?</inlineHelpText>
    <label>Customer Demonstration Requirements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>