unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <inlineHelpText>Lost Decision Date</inlineHelpText>
    <label>z_Decision Date</label>
    <type>Date</type>
</CustomField>