unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Demonstration_of_Industry_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Demonstration_of_Industry_knowledge__c</fullName>
    <inlineHelpText>Did the customer think that TechOne demonstrated industry knowledge?</inlineHelpText>
    <label>Demonstration of Industry knowledge</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>