unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Detail_Notes__c.field-meta.xml
<CustomField>
    <fullName>Detail_Notes__c</fullName>
    <label>Detail Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>