unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Date__c</fullName>
    <inlineHelpText>When did we first engage with the customer/prospect for this opportunity?</inlineHelpText>
    <label>Engagement Date</label>
    <type>Date</type>
</CustomField>