unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Feedback_from_Competitor_Reference_Sites__c.field-meta.xml
<CustomField>
    <fullName>Feedback_from_Competitor_Reference_Sites__c</fullName>
    <inlineHelpText>What feedback did they get from the reference sites from our competitors?</inlineHelpText>
    <label>Feedback from Competitor Reference Sites</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>