unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Feedback_from_TechOne_Reference_Sites__c.field-meta.xml
<CustomField>
    <fullName>Feedback_from_TechOne_Reference_Sites__c</fullName>
    <inlineHelpText>What feedback did the customer/prospect receive from our reference sites?</inlineHelpText>
    <label>Feedback from TechOne Reference Sites</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>