unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Final_Proposed_Licence_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_Proposed_Licence_Fee__c</fullName>
    <label>z_Final Proposed Licence Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>