unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Full_Report_Completed__c.field-meta.xml
<CustomField>
    <fullName>Full_Report_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Full Report Completed</label>
    <type>Checkbox</type>
</CustomField>