unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Functional_Advantages_Disadvantage__c.field-meta.xml
<CustomField>
    <fullName>Functional_Advantages_Disadvantage__c</fullName>
    <inlineHelpText>What were our main functional advantages/disadvantages?</inlineHelpText>
    <label>Functional Advantages/Disadvantage</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>