unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/How_did_our_competitor_products_compare__c.field-meta.xml
<CustomField>
    <fullName>How_did_our_competitor_products_compare__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>Was there anything that particularly impressed the customer/prospect with our competitors’ products or ours?</inlineHelpText>
    <label>How did our competitor products compare?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>