unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incumbent</label>
    <referenceTo>T1_Competitor__c</referenceTo>
    <relationshipLabel>Win Or Lost Reports (Incumbent)</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>