unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Incumbent_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incumbent Product Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vendor_Product__c.System_Vendor__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Incumbent__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vendor_Product__c</referenceTo>
    <relationshipLabel>Win Or Lost Reports</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>