unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Key_Factors_to__c.field-meta.xml
<CustomField>
    <fullName>Key_Factors_to__c</fullName>
    <inlineHelpText>What were the three key factors that led the customer/prospect to their decision?</inlineHelpText>
    <label>Three key factors led to  decision</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product capability</fullName>
            </value>
            <value>
                <fullName>Solution fit</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Trust in Brand</fullName>
            </value>
            <value>
                <fullName>CiAnywhere</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Licensing Restrictions</fullName>
            </value>
            <value>
                <fullName>Did Not Meet Tender Requirements</fullName>
            </value>
            <value>
                <fullName>Consulting/Services Offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>