unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Lessons_Learnt__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learnt__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Lessons Learnt</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>