unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Losing_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Losing_Competitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Enter Losing Competitor. If no losing competitor, then select None record.</inlineHelpText>
    <label>z_Losing Competitor</label>
    <referenceTo>T1_Competitor__c</referenceTo>
    <relationshipLabel>Competitor Losses</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>