unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Loss_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Comments__c</fullName>
    <label>z_Loss Reason Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>