unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Lost_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_s__c</fullName>
    <inlineHelpText>Please select all reasons for loss that apply</inlineHelpText>
    <label>z_Lost Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engagement / Relationship</fullName>
            </value>
            <value>
                <fullName>Product / Solution Fit or Capability</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Sales / Presales (Presentation, Demo)</fullName>
            </value>
            <value>
                <fullName>Reference Site</fullName>
            </value>
            <value>
                <fullName>Consulting / Project Management</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>