unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/No_Good_Value_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_Good_Value_Comments__c</fullName>
    <inlineHelpText>Was it considered that our price represented good value for money? If &#39;No&#39;, add comments.</inlineHelpText>
    <label>No to Good Value Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>