unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/No_to_AMS_Offered_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_to_AMS_Offered_Comments__c</fullName>
    <inlineHelpText>If not, why</inlineHelpText>
    <label>No to AMS Offered Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>