unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/No_to_Competitive_Pricing_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_to_Competitive_Pricing_Comments__c</fullName>
    <inlineHelpText>Implementation pricing.  Was it competitive in terms of number of days and daily rate?  if ‘No’, add comments</inlineHelpText>
    <label>No to Competitive Pricing Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>