unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/No_to_Ongoing_Support_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_to_Ongoing_Support_Comments__c</fullName>
    <inlineHelpText>Was the customer/prospect comfortable with our ability to deliver ongoing support services?  If No, add comments.</inlineHelpText>
    <label>No to Ongoing Support Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>