unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/No_to_Proposed_Services_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_to_Proposed_Services_Comments__c</fullName>
    <inlineHelpText>Did the proposed services meet all the customer/prospects requirements?  If No, add comments.</inlineHelpText>
    <label>No to Proposed Services Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>