unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/No_to_Proposed_Solution_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_to_Proposed_Solution_Comments__c</fullName>
    <defaultValue>&#39;No&#39;</defaultValue>
    <inlineHelpText>Was the customer/prospect comfortable with our ability to deliver the proposed solution?  If no, add comments</inlineHelpText>
    <label>No to Proposed Solution Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>