unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Ongoing_Support__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Support__c</fullName>
    <inlineHelpText>Was the customer/prospect comfortable with our ability to deliver ongoing support services?</inlineHelpText>
    <label>Delivery of Ongoing Support Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>