unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products__c</fullName>
    <label>Opportunity Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Name</valueSetName>
    </valueSet>
</CustomField>