unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Position_Title_1__c.field-meta.xml
<CustomField>
    <fullName>Position_Title_1__c</fullName>
    <formula>Contact_Name_1__r.Title</formula>
    <label>Position Title</label>
    <type>Text</type>
</CustomField>