unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Prior_knowledge_of_TechOne__c.field-meta.xml
<CustomField>
    <fullName>Prior_knowledge_of_TechOne__c</fullName>
    <inlineHelpText>What did the customer/prospect know about us before they started the selection process?</inlineHelpText>
    <label>Prior knowledge of TechOne</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>