unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Proposed_Services__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Services__c</fullName>
    <inlineHelpText>Did the proposed services meet all the customer/prospects requirements?</inlineHelpText>
    <label>Delivery of Proposed Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>