unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <inlineHelpText>Was the customer/prospect comfortable with our ability to deliver the proposed solution?</inlineHelpText>
    <label>Delivery of Proposed Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>