unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Quality_of_Competitors_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Competitors_Presentation__c</fullName>
    <inlineHelpText>What did the customer/prospect think of our competitor’s presentation?</inlineHelpText>
    <label>Quality of Competitors Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_Marks</valueSetName>
    </valueSet>
</CustomField>