unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Quality_of_Product_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Product_Functionality__c</fullName>
    <inlineHelpText>Were our products considered functionally superior to our competitors?</inlineHelpText>
    <label>Quality of Product Functionality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>