unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Quality_of_T1_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_T1_Proposal__c</fullName>
    <inlineHelpText>What was the customers/prospects view of the quality of our proposal/tender response?</inlineHelpText>
    <label>Quality of TechOne Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_Marks</valueSetName>
    </valueSet>
</CustomField>