unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Reference_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact_Name__c</fullName>
    <label>Reference Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>