unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Reference_Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Reference_Position_Title__c</fullName>
    <label>Reference Position Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>