unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>&quot;Ensure you update the total opportunity value. Deal Value (Solution) or Total Licence Fee Price (Product)&quot;</defaultValue>
    <inlineHelpText>Ensure you update the total opportunity value
Deal Value (Solution) or Total Licence Fee Price (Product)</inlineHelpText>
    <label>z_Reminder</label>
    <type>TextArea</type>
</CustomField>