unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>