unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/RFP_Process__c.field-meta.xml
<CustomField>
    <fullName>RFP_Process__c</fullName>
    <inlineHelpText>Did the customer/prospect go through an RFP process?</inlineHelpText>
    <label>RFP process (Yes/No)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>