unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Secondary_Key_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Key_Reason__c</fullName>
    <inlineHelpText>Secondary reason for win/loss result</inlineHelpText>
    <label>Secondary Key Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Key_Reason</valueSetName>
    </valueSet>
</CustomField>