unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/T1_Engagement_History__c.field-meta.xml
<CustomField>
    <fullName>T1_Engagement_History__c</fullName>
    <inlineHelpText>What did the customer/prospect know about us before they started the selection process?
First Contact Date, Demo date etc</inlineHelpText>
    <label>TechOne Engagement History</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>