unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/T1_Reference_Site_Comments__c.field-meta.xml
<CustomField>
    <fullName>T1_Reference_Site_Comments__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>TechOne Reference Site Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>