unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/T1_Reference_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>T1_Reference_Site_Name__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>Which of our reference sites did they contact – if known?</inlineHelpText>
    <label>TechOne Reference Site Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>