unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/T1_Supporter__c.field-meta.xml
<CustomField>
    <fullName>T1_Supporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechOne Supporter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>TechnologyOne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Or Lost Reports (T1 Supporter)</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>