unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/T1_vs_Competitor_Price_Comparison__c.field-meta.xml
<CustomField>
    <fullName>T1_vs_Competitor_Price_Comparison__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>How did our prices compare to our competitors?</inlineHelpText>
    <label>TechOne vs Competitor Price Comparison</label>
    <type>TextArea</type>
</CustomField>