unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Total_Deal_Final_Proposed_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Final_Proposed_Price__c</fullName>
    <label>z_Total Deal Final Proposed Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>