unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Total_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Value__c</fullName>
    <formula>Opportunity__r.Amount + Opportunity__r.Total_ASM_Amount_Quoted__c + Opportunity__r.Cloud_Service_Fee_per_year__c + Opportunity__r.Annual_SaaS_Cloud_Fee__c + Opportunity__r.Total_Implementation_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>