unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Was_AMS_offered__c.field-meta.xml
<CustomField>
    <fullName>Was_AMS_offered__c</fullName>
    <inlineHelpText>Was AMS offered as part of this solution?</inlineHelpText>
    <label>Was AMS offered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>