unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Was_implementation_pricing_competitive__c.field-meta.xml
<CustomField>
    <fullName>Was_implementation_pricing_competitive__c</fullName>
    <inlineHelpText>Implementation pricing.  Was it competitive in terms of number of days and daily rate?</inlineHelpText>
    <label>Was implementation pricing competitive?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>