unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Was_our_price_good_value_for_money__c.field-meta.xml
<CustomField>
    <fullName>Was_our_price_good_value_for_money__c</fullName>
    <inlineHelpText>Was it considered that our price represented good value for money?</inlineHelpText>
    <label>Was our price good value for money?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>