unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Where_was_TechOne_eliminated__c.field-meta.xml
<CustomField>
    <fullName>Where_was_TechOne_eliminated__c</fullName>
    <inlineHelpText>Demo, BAFO, Did not make past EOI etc.</inlineHelpText>
    <label>z_Where was TechOne eliminated</label>
    <type>TextArea</type>
</CustomField>