unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Win_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Win_Reason_Comments__c</fullName>
    <label>z_Win Reason Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>