unpackaged/main/default/objects/Win_Or_Lost_Report__c/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>z_Winning Competitor</label>
    <referenceTo>T1_Competitor__c</referenceTo>
    <relationshipLabel>Competitor Wins</relationshipLabel>
    <relationshipName>Win_Or_Lost_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>