unpackaged/main/default/objects/Win_Or_Lost_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Report_Type__c</columns>
    <columns>Report_Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>